--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "http-server": "^14.1.1",
     "nodemon": "^2.0.20",
     "postcss-cli": "^10.1.0",
+    "postcss-mixins": "^9.0.4",
     "postcss-preset-env": "^7.8.3",
     "prettier": "^2.8.2"
   }
